version control

0.0.0
first  = major release
second = minor release
third  = patch number

version 0.4.0
    - basic datatypes
    - basic logic
    - loops and lables
    - goto/goif
    - functions
    - reading files
    - include files
    - IO
    - variables
    - function returns
    - variable size

version 0.4.2
    - variable removal (free)
    - nested logic
    - sleeping