@@ -1,0 +1,8 @@
+
+class BLUE_ERROR_HANDLER:
+    def __init__(self, MEMORY):
+        self.MEMORY = MEMORY
+    
+    
+    def UnknownVarError(self, *args):
+        pass
