@@ -1,0 +1,10 @@
+import bs_types
+import UPL
+import sys
+import os
+
+def BLUE_():
+    pass
+
+def BLUE_get_os():
+    return os.name
