@@ -17,8 +17,13 @@ version 0.4.0
     - variables
     - function returns
     - variable size
+    - arrays
 
 version 0.4.2
     - variable removal (free)
     - nested logic
     - sleeping
+    - type (gets type)
+    - globals
+    - allowed program to be called from anther python script
+    
